# Self-Service

./: Admin.h  AdminPanel.h  CMakeLists.txt  ConfigPaths.h  DiningHall.h  Meal.h  Panel.h  README.md  Reservation.h  Self-Service.cpp  SessionBase.h  SessionManager.h  ShoppingCart.h  Storage.h  Student.h  Transaction.h  User.h  studentsCsvFile.csv
Data/Food Service/: DiningHalls.json  Meals.json
Data/Sessions/Admin/: admin.csv
Data/Sessions/Students/Transactions/: 4031226114.txt
sessions/students/reservations/: 4031226114.json
